# zzz_client

./: Cargo.toml
src/: account.rs  api.rs  instances.rs  main.rs
src/ui/: account_pages.rs  instance_page.rs  mod.rs
