[package]
name = "zzz_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
iced = { version = "0.14.0", features = ["tokio"] }
lighty-launcher = { version = "26.5.12", features = ["all-loaders", "events"] }
redb = "4.1.0"
reqwest = "0.13.4"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
